# modernized-record-keeping

./: .dockerignore  .gitignore  Dockerfile  README.md  lambda_handler.py  pyproject.toml
.github/workflows/: build.yml  release.yml
app/: main.py
app/api/: api.py
app/api/endpoints/: records.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: record.py
app/schemas/: record.py
cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: record-keeping-stack.d.ts  record-keeping-stack.js  record-keeping-stack.ts
scripts/: setup_cdk.sh  start_app.sh  test_db_connection.py
